# project

./: README.md
OOP2-Project/: README.md  covid_reporte.xlsx  pyproject.toml
OOP2-Project/src/OOP2_Project/defs/: assets.py
